<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="loginRequest"
            type="com.ctis487.project.digitalgamemarket.model.LoginRequest" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <com.ctis487.project.digitalgamemarket.custom.CustomUserView
        android:id="@+id/profileView"
        android:layout_width="258dp"
        android:layout_height="196dp"
        android:layout_marginBottom="18dp"
        app:layout_constraintBottom_toTopOf="@+id/editUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:name="@{loginRequest.username}"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle">

    </com.ctis487.project.digitalgamemarket.custom.CustomUserView>

    <EditText
        android:id="@+id/editUsername"
        android:layout_width="243dp"
        android:layout_height="0dp"
        android:layout_marginBottom="37dp"
        android:ems="10"
        android:hint="@string/editUsername"
        android:inputType="text"
        android:text="@={loginRequest.username}"
        app:layout_constraintBottom_toTopOf="@+id/editPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileView" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="244dp"
        android:layout_height="0dp"
        android:layout_marginBottom="11dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editUsername" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="122dp"
        android:layout_height="0dp"
        android:layout_marginBottom="181dp"
        android:text="@string/btnLogin"
        android:textAlignment="gravity"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPassword" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="246dp"
        android:layout_height="0dp"
        android:layout_marginTop="33dp"
        android:layout_marginBottom="24dp"
        android:text="@string/txtTitle"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/profileView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>